--- a/CourseRegistrationSystem/Views/Class/GetEmployeeList.cshtml
+++ b/CourseRegistrationSystem/Views/Class/GetEmployeeList.cshtml
@@ -1,10 +1,14 @@
 ﻿@model IEnumerable<CourseRegistration.Models.Participant>
 
-@foreach (var item in Model)
-{
-    <div class="checkbox" id="employeeList">
-        <label>
-            @item.FullName <input type="checkbox" id="@item.ParticipantId" name="@item.FullName">
-        </label>
-    </div>
-}
+<div id="employeeList">
+
+    @foreach (var item in Model)
+    {
+        <div class="checkbox">
+            <label>
+                @item.FullName <input type="checkbox" id="@item.ParticipantId" name="@item.FullName">
+            </label>
+        </div>
+    }
+
+</div>
