--- a/CourseRegistrationSystem/Views/CompanyHR/RegistrationDelete.cshtml
+++ b/CourseRegistrationSystem/Views/CompanyHR/RegistrationDelete.cshtml
@@ -1,11 +1,12 @@
 ﻿@model CourseRegistration.Models.Registration
 
 @{
-    ViewBag.Title = "RegistrationDetails";
+    ViewBag.Title = "RegistrationDelete";
 }
 
-<h2>RegistrationDetails</h2>
+<h2>RegistrationDelete</h2>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Registration</h4>
     <hr />
@@ -99,7 +100,13 @@
         </dd>
 
     </dl>
+
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "RegistrationList")
+        </div>
+    }
 </div>
-<p>
-    @Html.ActionLink("Back to List", "RegistrationList")
-</p>
