--- a/CourseRegistrationSystem/Views/CompanyHR/RegistrationList.cshtml
+++ b/CourseRegistrationSystem/Views/CompanyHR/RegistrationList.cshtml
@@ -83,8 +83,8 @@
             @Html.DisplayFor(modelItem => item.Timestamp)
         </td>
         <td>
-            @Html.ActionLink("Details", "Details", new { id=item.RegistrationId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.RegistrationId })
+            @Html.ActionLink("Details", "RegistrationDetails", new { id=item.RegistrationId }) |
+            @Html.ActionLink("Delete", "RegistrationDelete", new { id = item.RegistrationId })
         </td>
     </tr>
 }
