--- a/CourseRegistrationSystem/Views/Class/Index.cshtml
+++ b/CourseRegistrationSystem/Views/Class/Index.cshtml
@@ -42,9 +42,17 @@
         <td>
             @if(Request.IsAuthenticated)
             {
-                @Html.ActionLink("Register", "RegisterClassForHR", new { classId = item.ClassId })
-                @*@Html.ActionLink("Register", "RegisterClassForHR", new { classId=item.ClassId })*@
-            }else{
+                if (User.IsInRole("IndividualUser"))
+                {
+                    @Html.ActionLink("Register", "RegisterClassForIU", new { classId=item.ClassId })
+                }
+                else
+                {
+                    @Html.ActionLink("Register", "RegisterClassForHR", new { classId = item.ClassId })
+                }
+            }
+            else
+            {
                 @Html.ActionLink("Register", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
             }
                 
