--- a/CourseRegistrationSystem/Views/Class/RegisterClassForIU.cshtml
+++ b/CourseRegistrationSystem/Views/Class/RegisterClassForIU.cshtml
@@ -1,4 +1,4 @@
-﻿@model CourseRegistration.Models.Participant
+﻿@model CourseRegistration.Models.Registration
 
 @{
     ViewBag.Title = "RegisterClassForIU";
@@ -7,22 +7,22 @@
 <ul class="breadcrumb">
     <li>@Html.ActionLink("Home", "Index", "Home")</li>
     <li>@Html.ActionLink("Class", "Index", "Class")</li>
-    <li>@ViewBag.CourseClass.ClassId</li>
+    <li>@Model.CourseClass.ClassId</li>
 </ul>
 
-<h2>@ViewBag.CourseClass.ClassId Class Registration</h2>
+<h2>@Model.CourseClass.ClassId Class Registration</h2>
 
-<h4>@ViewBag.CourseClass.Course.CourseTitle</h4>
+<h4>@Model.CourseClass.Course.CourseTitle</h4>
 
 <p>
-    @ViewBag.CourseClass.Course.CourseDescription
+    @Model.CourseClass.Course.CourseDescription
 </p>
 
-<p>Fee: @ViewBag.CourseClass.Course.Fee</p>
-<p>Duration: @ViewBag.CourseClass.Course.NumberOfDays days</p>
-<p>Start Date: @ViewBag.CourseClass.StartDate.ToString("yyyy-MM-dd") & End Date: @ViewBag.CourseClass.EndDate.ToString("yyyy-MM-dd")</p>
+<p>Fee: @Model.CourseClass.Course.Fee</p>
+<p>Duration: @Model.CourseClass.Course.NumberOfDays days</p>
+<p>Start Date: @Model.CourseClass.StartDate.ToString("yyyy-MM-dd") & End Date: @Model.CourseClass.EndDate.ToString("yyyy-MM-dd")</p>
 
-@using (Html.BeginForm("RegisterClassForIU", "Class", new { classId = ViewBag.CourseClass.ClassId, participant = Model}))
+@using (Html.BeginForm("RegisterClassForIU", "Class", new { r = Model }))
 {
     @Html.AntiForgeryToken()
 <div class="panel panel-default">
@@ -35,122 +35,122 @@
             <div class="form-horizontal">
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
-                    @Html.LabelFor(model => model.IdNumber, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(model => model.Participant.IdNumber, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.IdNumber, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.IdNumber, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Participant.IdNumber, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Participant.IdNumber, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Salutation, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(model => model.Participant.Salutation, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.Salutation, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Salutation, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Participant.Salutation, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Participant.Salutation, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.EmploymentStatus, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(model => model.Participant.EmploymentStatus, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.EmploymentStatus, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.EmploymentStatus, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Participant.EmploymentStatus, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Participant.EmploymentStatus, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.CompanyName, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(model => model.Participant.CompanyName, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.CompanyName, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.CompanyName, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Participant.CompanyName, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Participant.CompanyName, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.JobTitle, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(model => model.Participant.JobTitle, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.JobTitle, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.JobTitle, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Participant.JobTitle, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Participant.JobTitle, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Department, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(model => model.Participant.Department, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.Department, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Department, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Participant.Department, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Participant.Department, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.FullName, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(model => model.Participant.FullName, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.FullName, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.FullName, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Participant.FullName, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Participant.FullName, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(model => model.Participant.Gender, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.EnumDropDownListFor(model => model.Gender, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
+                        @Html.EnumDropDownListFor(model => model.Participant.Gender, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.Participant.Gender, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Nationality, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(model => model.Participant.Nationality, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.Nationality, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Nationality, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Participant.Nationality, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Participant.Nationality, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.DateOfBirth, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(model => model.Participant.DateOfBirth, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.DateOfBirth, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.DateOfBirth, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Participant.DateOfBirth, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Participant.DateOfBirth, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(model => model.Participant.Email, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Participant.Email, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Participant.Email, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.ContactNumber, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(model => model.Participant.ContactNumber, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.ContactNumber, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.ContactNumber, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Participant.ContactNumber, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Participant.ContactNumber, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.DietaryRequirement, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(model => model.Participant.DietaryRequirement, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.DietaryRequirement, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.DietaryRequirement, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Participant.DietaryRequirement, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Participant.DietaryRequirement, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.OrganizationSize, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(model => model.Participant.OrganizationSize, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.OrganizationSize, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.OrganizationSize, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Participant.OrganizationSize, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Participant.OrganizationSize, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.SalaryRange, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(model => model.Participant.SalaryRange, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.EnumDropDownListFor(model => model.SalaryRange, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.SalaryRange, "", new { @class = "text-danger" })
+                        @Html.EnumDropDownListFor(model => model.Participant.SalaryRange, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.Participant.SalaryRange, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
@@ -168,30 +168,34 @@
                 <h4>Billing Address</h4>
                 <hr />
                 <div class="form-group">
-                    @Html.Label("Address", htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(model => model.BillingAddress, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.Editor("Address", new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.BillingAddress, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.BillingAddress, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.Label("PersonName", htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(model => model.BillingPersonName, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.Editor("PersonName", new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.BillingPersonName, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.BillingPersonName, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.Label("Country", htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(model => model.BillingAddressCountry, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.Editor("Country", new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.BillingAddressCountry, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.BillingAddressCountry, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.Label("PostalCode", htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(model => model.BillingAddressPostalCode, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.Editor("PostalCode", new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.BillingAddressPostalCode, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.BillingAddressPostalCode, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
