--- a/CourseRegistrationSystem/Views/Shared/_Layout.cshtml
+++ b/CourseRegistrationSystem/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 <body>
     <div class="container" style="padding-top:5px;padding-bottom:2px;">
         <a class="logo" href="~/Home/Index"></a>
-        @using (Ajax.BeginForm("Search", "Home", new { genre = string.Empty },
+        @using (Ajax.BeginForm("Search", "Course", null,
                 new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "main-content" }))
         {
             <div class="input-group search">
